@@ -20,10 +20,13 @@
     <property name="cli.bundle" value="${build}/duck.bundle"/>
 
     <property name="app.name" value="Cyberduck"/>
-    <property name="app.runtime.archs" value="x86_64"/>
-    <property name="app.runtime.system.min" value="10.9"/>
+    <property name="app.runtime.archs" value="'x86_64 arm64'"/>
+    <property name="app.runtime.system.min" value="10.12"/>
+    <property name="app.runtime.args"
+              value="-client --add-opens=java.base/sun.security.ssl=ALL-UNNAMED --add-opens=java.base/sun.security.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -Djava.library.path=$APP_PACKAGE/Contents/Frameworks -Djna.boot.library.path=$APP_PACKAGE/Contents/Frameworks -Djna.library.path=$APP_PACKAGE/Contents/Frameworks -Djna.nounpack=true -Djava.awt.headless=true -Dsun.jnu.encoding=utf-8 -Dfile.encoding=utf-8 -Dsun.io.useCanonCaches=false -DLog4jContextSelector=org.apache.logging.log4j.core.selector.BasicContextSelector -XX:+UseG1GC -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=20 -XX:+UseStringDeduplication"/>
+
     <property name="build.xcodeoptions"
-              value="JAVA_HOME=${java.home} SYMROOT=${build} SDKROOT=macosx ARCHS=${app.runtime.archs} MACOSX_DEPLOYMENT_TARGET=${app.runtime.system.min}"/>
+              value="JVM_RUNTIME_ARGS='${app.runtime.args}' JAVA_HOME=${java.home} SYMROOT=${build} SDKROOT=macosx ARCHS=${app.runtime.archs} MACOSX_DEPLOYMENT_TARGET=${app.runtime.system.min}"/>
 
     <property name="xcode.configuration" value="Release"/>
     <property name="xcode.target" value="cli"/>
@@ -68,7 +71,6 @@
     <target name="package" depends="build">
         <antcall target="codesign">
             <param name="bundle" value="${cli.bundle}"/>
-            <param name="codesign.options" value="--force"/>
         </antcall>
         <antcall target="tar">
             <param name="directory" value="${build}"/>
